PS whitelisting - removed a TODO

There's no need to add a comment for every entry saying "no apparent privacy implications - no further thoughts", absence of comments is a reasonable indicator of this (clarified with mnissler over email).

BUG=650672

Review-Url: https://codereview.chromium.org/2389233003
Cr-Commit-Position: refs/heads/master@{#423134}

Former-commit-id: d04de4c5a7a78993944fcb0006b947fe6b020371